--- a/energy_tracker/src/web_app/templates/base.html
+++ b/energy_tracker/src/web_app/templates/base.html
@@ -7,6 +7,7 @@
     {% load bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="container mt-5">
