--- a/energy_tracker/src/web_app/templates/base.html
+++ b/energy_tracker/src/web_app/templates/base.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
+    {% include "navbar.html" %}
     <div class="container mt-5">
         {% block content %}{% endblock content %}
     </div>
