--- a/energy_tracker/src/web_app/templates/index.html
+++ b/energy_tracker/src/web_app/templates/index.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="mt-3">
-<h1>Übersicht Zählerstände</h1>
+<h1>Zählerstand letzte 5 Einträge <a href={% url "overview" %} class="btn btn-success">Alle</a></h1> 
 <table class="table table-striped table-sm">
     <thead class="table-dark">
       <tr>
@@ -22,7 +22,6 @@
         <th scope="col">Einkauf (180)</th>
         <th scope="col">Einspeisung (280)</th>
         <th scope="col">Letzte Änderung</th>
-        <th></th>
       </tr>
     </thead>    
     <tbody class="table-group-divider">
@@ -32,7 +31,6 @@
         <td>{{data.energy_buy}} kWh</td>
         <td>{{data.energy_sell}} kWh</td>
         <td>{{data.last_change}}</td>
-        <td><a href={% url "edit-entry" data.id %} class="btn btn-secondary">Ändern</a></td>
       </tr>
     {% endfor %}
     </tbody>
