--- a/energy_tracker/src/web_app/templates/navbar.html
+++ b/energy_tracker/src/web_app/templates/navbar.html
@@ -9,6 +9,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Auswertung</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href={% url "overview" %}>Übersicht</a>
+          </li>
         </ul>
       </div>
     </div>
