--- a/energy_tracker/src/web_app/templates/index.html
+++ b/energy_tracker/src/web_app/templates/index.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="mt-3">
-<h1>Übersicht Zählerstände</h1>
+<h1>Zählerstand letzte 5 Einträge <a href={% url "overview" %} class="btn btn-success">Alle</a></h1> 
 <table class="table table-striped table-sm">
     <thead class="table-dark">
       <tr>
